src/objects/Integration_Request__c.object
<CustomObject>
    <description>Representation of an asynchronous integration notification request</description>
    <fields>
        <fullName>Direction__c</fullName>
        <description>Direction of interaction</description>
        <label>Direction</label>
        <picklist>
            <picklistValues>
                <fullName>Inbound</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Outbound</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Error_Code__c</fullName>
        <label>Error Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Error_Description__c</fullName>
        <description>Description of the error</description>
        <label>Error Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Event__c</fullName>
        <description>The business event</description>
        <label>Event</label>
        <picklist>
            <controllingField>Object_Name__c</controllingField>
            <picklistValues>
                <fullName>Register Student</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Student Vetted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Enrol Student</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Change to Financially Responsible Contact</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Change of Campus</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Modify Contract</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Application Cancelled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contract Cancelled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New Order</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Modify Order Line Item</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Resend Request</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Geo__c</fullName>
        <label>Geo</label>
        <picklist>
            <picklistValues>
                <fullName>North America</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Core</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Growth</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>LoB__c</fullName>
        <label>LoB</label>
        <picklist>
            <picklistValues>
                <fullName>HE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>K-12</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Professional</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Market__c</fullName>
        <label>Market</label>
        <picklist>
            <picklistValues>
                <fullName>ZA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>US</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Object_Id__c</fullName>
        <description>The ID of the primary object</description>
        <externalId>true</externalId>
        <label>Object Id</label>
        <length>18</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Object_Name__c</fullName>
        <description>The name of the primary object</description>
        <label>Object Name</label>
        <picklist>
            <picklistValues>
                <fullName>Opportunity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Case</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Order</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Order Line Item</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Object_Original__c</fullName>
        <description>JSON representation of the original object</description>
        <label>Object Original</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Functional Error</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Queued</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ready For Submission</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Received</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Technical Error</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Sub_Event__c</fullName>
        <description>The name of the sub-event</description>
        <label>Sub-Event</label>
        <picklist>
            <controllingField>Event__c</controllingField>
            <picklistValues>
                <fullName>Change Module Choice</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Change Module Status</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancellation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approval</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejection</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Retake Module</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>check_responses__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is used at trigger to check if the system responses need to be check to determine the status of the Integration Request</description>
        <label>check Responses</label>
        <type>Checkbox</type>
    </fields>
    <label>Integration Request</label>
    <listViews>
        <fullName>All</fullName>
        <columns>OWNER.ALIAS</columns>
        <columns>CREATED_DATE</columns>
        <columns>NAME</columns>
        <columns>Object_Id__c</columns>
        <columns>Direction__c</columns>
        <columns>Error_Description__c</columns>
        <columns>Event__c</columns>
        <columns>Geo__c</columns>
        <columns>LoB__c</columns>
        <columns>Market__c</columns>
        <columns>Object_Name__c</columns>
        <columns>Object_Original__c</columns>
        <columns>Status__c</columns>
        <columns>Sub_Event__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Good_IR</fullName>
        <columns>NAME</columns>
        <columns>Direction__c</columns>
        <columns>Error_Code__c</columns>
        <columns>Error_Description__c</columns>
        <columns>Event__c</columns>
        <columns>Geo__c</columns>
        <columns>LoB__c</columns>
        <columns>Market__c</columns>
        <columns>Object_Id__c</columns>
        <columns>Object_Name__c</columns>
        <columns>Object_Original__c</columns>
        <columns>Status__c</columns>
        <columns>Sub_Event__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Object_Id__c</field>
            <operation>contains</operation>
            <value>801g00000027Tmc</value>
        </filters>
        <label>Good IR</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>I-{0000000000}</displayFormat>
        <label>Integration Request Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Integration Requests</pluralLabel>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>C_RequiredInformation</fullName>
        <active>true</active>
        <errorConditionFormula>OR( ISPICKVAL( Direction__c , &apos;&apos;), ISPICKVAL( Event__c , &apos;&apos;), ISPICKVAL( Object_Name__c , &apos;&apos;), ISPICKVAL( Status__c , &apos;&apos;))</errorConditionFormula>
        <errorMessage>Direction, Event, Object Name and Status are required.</errorMessage>
    </validationRules>
</CustomObject>